Fixed toolbar help overlap

--- a/src/pages/content/toolbar/Toolbar.css
+++ b/src/pages/content/toolbar/Toolbar.css
@@ -10,6 +10,7 @@
 
   height: var(--toolbar-height);
   overflow: hidden;
+  overflow-x: scroll;
 
   background-color: var(--color-main);
   box-shadow: 0 0.16em 0 var(--color-accent-dark);
